Cleaned up design guide options page and related pages

--- a/site/pages/v4/design/buttons-en.hbs
+++ b/site/pages/v4/design/buttons-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Buttons",
 	"language": "en",
 	"altLangPrefix": "buttons",
-	"dateModified": "2014-07-03"
+	"dateModified": "2014-08-07"
 }
 ---
 <span class="wb-prettify all-pre"></span>
@@ -444,28 +444,41 @@
 		<h3 id="btn-groups-sizing">Sizing</h3>
 		<p>Instead of applying button sizing classes to every button in a group, just add <code>btn-group-*</code> to the <code>btn-group</code>.</p>
 
-		<ul class="list-unstyled">
-			<li class="btn-group btn-group-lg mrgn-bttm-md">
+		<section>
+			<h4>Large</h4>
+			<div class="btn-group btn-group-lg mrgn-bttm-md">
 				<button type="button" class="btn btn-default">Left</button>
 				<button type="button" class="btn btn-default">Middle</button>
 				<button type="button" class="btn btn-default">Right</button>
-			</li>
-			<li class="btn-group mrgn-bttm-md">
+			</div>
+		</section>
+
+		<section>
+			<h4>Medium (default)</h4>
+			<div class="btn-group mrgn-bttm-md">
 				<button type="button" class="btn btn-default">Left</button>
 				<button type="button" class="btn btn-default">Middle</button>
 				<button type="button" class="btn btn-default">Right</button>
-			</li>
-			</li class="btn-group btn-group-sm mrgn-bttm-md">
+			</div>
+		</section>
+
+		<section>
+			<h4>Small</h4>
+			<div class="btn-group btn-group-sm mrgn-bttm-md">
 				<button type="button" class="btn btn-default">Left</button>
 				<button type="button" class="btn btn-default">Middle</button>
 				<button type="button" class="btn btn-default">Right</button>
-			</li>
-			<li class="btn-group btn-group-xs">
+			</div>
+		</section>
+
+		<section>
+			<h4>Extra-small</h4>
+			<div class="btn-group btn-group-xs">
 				<button type="button" class="btn btn-default">Left</button>
 				<button type="button" class="btn btn-default">Middle</button>
 				<button type="button" class="btn btn-default">Right</button>
-			</li>
-		</ul>
+			</div>
+		</section>
 
 		<div class="mrgn-tp-lg">
 			<pre><code>&lt;ul class=&quot;list-unstyled&quot;&gt;
