--- a/site/pages/v4/design/forms-en.hbs
+++ b/site/pages/v4/design/forms-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Forms",
 	"language": "en",
 	"altLangPrefix": "forms",
-	"dateModified": "2014-07-03"
+	"dateModified": "2014-08-06"
 }
 ---
 <span class="wb-prettify all-pre"></span>
@@ -658,33 +658,33 @@
 		<form role="form" method="get" action="#">
 			<div class="form-group has-success has-feedback">
 				<label class="control-label" for="inputSuccess2">Input with success</label>
-				<input class="form-control" id="inputSuccess2" type="text" />
+				<input class="form-control full-width" id="inputSuccess2" type="text" />
 				<span class="glyphicon glyphicon-ok form-control-feedback"></span>
 			</div>
 			<div class="form-group has-warning has-feedback">
 				<label class="control-label" for="inputWarning2">Input with warning</label>
-				<input class="form-control" id="inputWarning2" type="text" />
+				<input class="form-control full-width" id="inputWarning2" type="text" />
 				<span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
 			</div>
 			<div class="form-group has-error has-feedback">
 				<label class="control-label" for="inputError2">Input with error</label>
-				<input class="form-control" id="inputError2" type="text">
+				<input class="form-control full-width" id="inputError2" type="text" />
 				<span class="glyphicon glyphicon-remove form-control-feedback"></span>
 			</div>
 		</form>
 		<pre><code>&lt;div class="form-group has-success has-feedback"&gt;
 &lt;label class="control-label" for="inputSuccess2"&gt;Input with success&lt;/label&gt;
-&lt;input type="text" class="form-control" id="inputSuccess2" /&gt;
+&lt;input type="text" class="form-control full-width" id="inputSuccess2" /&gt;
 &lt;span class="glyphicon glyphicon-ok form-control-feedback"&gt;&lt;/span&gt;
 &lt;/div&gt;
 &lt;div class="form-group has-warning has-feedback"&gt;
 &lt;label class="control-label" for="inputWarning2"&gt;Input with warning&lt;/label&gt;
-&lt;input type="text" class="form-control" id="inputWarning2" /&gt;
+&lt;input type="text" class="form-control full-width" id="inputWarning2" /&gt;
 &lt;span class="glyphicon glyphicon-warning-sign form-control-feedback"&gt;&lt;/span&gt;
 &lt;/div&gt;
 &lt;div class="form-group has-error has-feedback"&gt;
 &lt;label class="control-label" for="inputError2"&gt;Input with error&lt;/label&gt;
-&lt;input type="text" class="form-control" id="inputError2" /&gt;
+&lt;input type="text" class="form-control full-width" id="inputError2" /&gt;
 &lt;span class="glyphicon glyphicon-remove form-control-feedback"&gt;&lt;/span&gt;
 &lt;/div&gt;</code></pre>
 		<p>Optional icons also work on horizontal and inline forms.</p>
@@ -692,7 +692,7 @@
 			<div class="form-group has-success has-feedback">
 				<label class="control-label col-sm-3" for="inputSuccess3">Input with success</label>
 				<div class="col-sm-9">
-					<input class="form-control" id="inputSuccess3" type="text" />
+					<input class="form-control full-width" id="inputSuccess3" type="text" />
 					<span class="glyphicon glyphicon-ok form-control-feedback"></span>
 				</div>
 			</div>
@@ -701,7 +701,7 @@
 &lt;div class="form-group has-success has-feedback"&gt;
 	&lt;label class="control-label col-sm-3" for="inputSuccess3"&gt;Input with success&lt;/label&gt;
 	&lt;div class="col-sm-9"&gt;
-		&lt;input type="text" class="form-control" id="inputSuccess3" /&gt;
+		&lt;input type="text" class="form-control full-width" id="inputSuccess3" /&gt;
 		&lt;span class="glyphicon glyphicon-ok form-control-feedback"&gt;&lt;/span&gt;
 	&lt;/div&gt;
 &lt;/div&gt;
