--- a/site/pages/v4/design/listgroup-en.hbs
+++ b/site/pages/v4/design/listgroup-en.hbs
@@ -98,7 +98,7 @@
 </section>
 
 <section>
-	<h2 class="page-header" id="links">Add links</h2>
+	<h2 class="page-header" id="links">With links</h2>
 	<p>Linkify list group items by using anchor tags instead of list items (that also means a parent <code>&lt;div&gt;</code> instead of an <code>&lt;ul&gt;</code>). No need for individual parents around each element.</p>
 	<div class="list-group">
 		<a href="#" class="list-group-item active">Cras justo odio</a>
