--- a/site/pages/v4/design/opacity-en.hbs
+++ b/site/pages/v4/design/opacity-en.hbs
@@ -49,7 +49,7 @@
 					<img class="opct-100" src="http://placehold.it/140x140" alt="Demo of opct-100" />
 				</td>
 				<td>
-					<p class="opct-100">Demo of opct-100</p>
+					<p class="opct-100">Demo of <code>opct-100</code></p>
 				</td>
 			</tr>
 			<tr>
@@ -59,7 +59,7 @@
 					<img class="opct-90" src="http://placehold.it/140x140" alt="Demo of opct-90" />
 				</td>
 				<td>
-					<p class="opct-90">Demo of opct-90</p>
+					<p class="opct-90">Demo of <code>opct-90</code></p>
 				</td>
 			</tr>
 			<tr>
@@ -69,7 +69,7 @@
 					<img class="opct-80" src="http://placehold.it/140x140" alt="Demo of opct-80" />
 				</td>
 				<td>
-					<p class="opct-80">Demo of opct-80</p>
+					<p class="opct-80">Demo of <code>opct-80</code></p>
 				</td>
 			</tr>
 			<tr>
@@ -79,7 +79,7 @@
 					<img class="opct-70" src="http://placehold.it/140x140" alt="Demo of opct-70" />
 				</td>
 				<td>
-					<p class="opct-70">Demo of opct-70</p>
+					<p class="opct-70">Demo of <code>opct-70</code></p>
 				</td>
 			</tr>
 			<tr>
@@ -89,7 +89,7 @@
 					<img class="opct-60" src="http://placehold.it/140x140" alt="Demo of opct-60" />
 				</td>
 				<td>
-					<p class="opct-60">Demo of opct-60</p>
+					<p class="opct-60">Demo of <code>opct-60</code></p>
 				</td>
 			</tr>
 			<tr>
@@ -99,7 +99,7 @@
 					<img class="opct-50" src="http://placehold.it/140x140" alt="Demo of opct-50" />
 				</td>
 				<td>
-					<p class="opct-50">Demo of opct-50</p>
+					<p class="opct-50">Demo of <code>opct-50</code></p>
 				</td>
 			</tr>
 			<tr>
@@ -109,7 +109,7 @@
 					<img class="opct-40" src="http://placehold.it/140x140" alt="Demo of opct-40" />
 				</td>
 				<td>
-					<p class="opct-40">Demo of opct-40</p>
+					<p class="opct-40">Demo of <code>opct-40</code></p>
 				</td>
 			</tr>
 			<tr>
@@ -119,7 +119,7 @@
 					<img class="opct-30" src="http://placehold.it/140x140" alt="Demo of opct-30" />
 				</td>
 				<td>
-					<p class="opct-30">Demo of opct-30</p>
+					<p class="opct-30">Demo of <code>opct-30</code></p>
 				</td>
 			</tr>
 			<tr>
@@ -129,7 +129,7 @@
 					<img class="opct-20" src="http://placehold.it/140x140" alt="Demo of opct-20" />
 				</td>
 				<td>
-					<p class="opct-20">Demo of opct-20</p>
+					<p class="opct-20">Demo of <code>opct-20</code></p>
 				</td>
 			</tr>
 			<tr>
@@ -139,7 +139,7 @@
 					<img class="opct-10" src="http://placehold.it/140x140" alt="Demo of opct-10" />
 				</td>
 				<td>
-					<p class="opct-10">Demo of opct-10</p>
+					<p class="opct-10">Demo of <code>opct-10</code></p>
 				</td>
 			</tr>
 		</tbody>
