Cleaned up button example markup

--- a/site/pages/v4/design/buttons-en.hbs
+++ b/site/pages/v4/design/buttons-en.hbs
@@ -157,42 +157,56 @@
 	<p>Fancy larger or smaller buttons? Add <code>btn-lg</code>, <code>btn-sm</code>, or <code>btn-xs</code> for additional sizes.</p>
 	<ul class="list-unstyled">
 		<li class="mrgn-tp-md">
-			<button type="button" class="btn btn-primary btn-lg">Large button</button></li>
-			<button type="button" class="btn btn-default btn-lg">Large button</button></li>
+			<ul class="list-inline">
+				<li><button type="button" class="btn btn-primary btn-lg">Large button</button></li>
+				<li><button type="button" class="btn btn-default btn-lg">Large button</button></li>
+			</ul>
 		</li>
 		<li class="mrgn-tp-md">
-			<button type="button" class="btn btn-primary">Default button</button>
-			<button type="button" class="btn btn-default">Default button</button>
-		</li>
-		<li>
-		<li class="mrgn-tp-md">
-			<button type="button" class="btn btn-primary btn-sm">Small button</button>
-			<button type="button" class="btn btn-default btn-sm">Small button</button>
+			<ul class="list-inline">
+				<li><button type="button" class="btn btn-primary">Default button</button></li>
+				<li><button type="button" class="btn btn-default">Default button</button></li>
+			</ul>
 		</li>
 		<li class="mrgn-tp-md">
-			<button type="button" class="btn btn-primary btn-xs">Extra small button</button>
-			<button type="button" class="btn btn-default btn-xs">Extra small button</button>
+			<ul class="list-inline">
+				<li><button type="button" class="btn btn-primary btn-sm">Small button</button></li>
+				<li><button type="button" class="btn btn-default btn-sm">Small button</button></li>
+			</ul>
+		</li>
+		<li class="mrgn-tp-md">
+			<ul class="list-inline">
+				<li><button type="button" class="btn btn-primary btn-xs">Extra small button</button></li>
+				<li><button type="button" class="btn btn-default btn-xs">Extra small button</button></li>
+			</ul>
 		</li>
 	</ul>
 
 	<div class="mrgn-tp-lg">
-		<pre><code>&lt;ul class=&quot;list-unstyled&quot;&gt;
-	&lt;li class=&quot;mrgn-tp-md&quot;&gt;
-		&lt;button type=&quot;button&quot; class=&quot;btn btn-primary btn-lg&quot;&gt;Large button&lt;/button&gt;&lt;/li&gt;
-		&lt;button type=&quot;button&quot; class=&quot;btn btn-default btn-lg&quot;&gt;Large button&lt;/button&gt;&lt;/li&gt;
+		<pre><code>&lt;ul class="list-unstyled"&gt;
+	&lt;li class="mrgn-tp-md"&gt;
+		&lt;ul class="list-inline"&gt;
+			&lt;li&gt;&lt;button type="button" class="btn btn-primary btn-lg"&gt;Large button&lt;/button&gt;&lt;/li&gt;
+			&lt;li&gt;&lt;button type="button" class="btn btn-default btn-lg"&gt;Large button&lt;/button&gt;&lt;/li&gt;
+		&lt;/ul&gt;
 	&lt;/li&gt;
-	&lt;li class=&quot;mrgn-tp-md&quot;&gt;
-		&lt;button type=&quot;button&quot; class=&quot;btn btn-primary&quot;&gt;Default button&lt;/button&gt;
-		&lt;button type=&quot;button&quot; class=&quot;btn btn-default&quot;&gt;Default button&lt;/button&gt;
+	&lt;li class="mrgn-tp-md"&gt;
+		&lt;ul class="list-inline"&gt;
+			&lt;li&gt;&lt;button type="button" class="btn btn-primary"&gt;Default button&lt;/button&gt;&lt;/li&gt;
+			&lt;li&gt;&lt;button type="button" class="btn btn-default"&gt;Default button&lt;/button&gt;&lt;/li&gt;
+		&lt;/ul&gt;
 	&lt;/li&gt;
-	&lt;li&gt;
-	&lt;li class=&quot;mrgn-tp-md&quot;&gt;
-		&lt;button type=&quot;button&quot; class=&quot;btn btn-primary btn-sm&quot;&gt;Small button&lt;/button&gt;
-		&lt;button type=&quot;button&quot; class=&quot;btn btn-default btn-sm&quot;&gt;Small button&lt;/button&gt;
+	&lt;li class="mrgn-tp-md"&gt;
+		&lt;ul class="list-inline"&gt;
+			&lt;li&gt;&lt;button type="button" class="btn btn-primary btn-sm"&gt;Small button&lt;/button&gt;&lt;/li&gt;
+			&lt;li&gt;&lt;button type="button" class="btn btn-default btn-sm"&gt;Small button&lt;/button&gt;&lt;/li&gt;
+		&lt;/ul&gt;
 	&lt;/li&gt;
-	&lt;li class=&quot;mrgn-tp-md&quot;&gt;
-		&lt;button type=&quot;button&quot; class=&quot;btn btn-primary btn-xs&quot;&gt;Extra small button&lt;/button&gt;
-		&lt;button type=&quot;button&quot; class=&quot;btn btn-default btn-xs&quot;&gt;Extra small button&lt;/button&gt;
+	&lt;li class="mrgn-tp-md"&gt;
+		&lt;ul class="list-inline"&gt;
+			&lt;li&gt;&lt;button type="button" class="btn btn-primary btn-xs"&gt;Extra small button&lt;/button&gt;&lt;/li&gt;
+			&lt;li&gt;&lt;button type="button" class="btn btn-default btn-xs"&gt;Extra small button&lt;/button&gt;&lt;/li&gt;
+		&lt;/ul&gt;
 	&lt;/li&gt;
 &lt;/ul&gt;</code></pre>
 	</div>
