Changed design guide page

--- a/site/pages/v4/design/index-en.hbs
+++ b/site/pages/v4/design/index-en.hbs
@@ -4,123 +4,116 @@
 	"language": "en",
 	"altLangPrefix": "index",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-08-06"
+	"dateModified": "2014-09-22"
 }
 ---
-<div class="row">
-	<div class="col-md-8">
-		<div class="row">
-			<div class="col-md-4 col-lg-3 visible-md visible-lg">
-				<span class="fa-stack fa-5x">
-					<span class="fa fa-circle fa-stack-2x"></span>
-					<span class="fa fa-picture-o fa-stack-1x fa-inverse"></span>
-				</span>
-			</div>
-			<div class="col-md-8 col-lg-9">
-				<p>The design guide offers a large selection of design and layout features for both basic and complex designs:</p>
-				<ul class="list-unstyled">
-					<li class="mrgn-bttm-sm"><a href="#core">Core design features</a><br />These design features are pure CSS and require no added functionality to work.</li>
-					<li><a href="#plugin">Plug-in design features</a><br />These design features are a mix of JavaScript and polyfills.</li>
-				</ul>
-			</div>
-		</div>
+<p>Offers a large selection of design elements for both basic and complex designs in the <a href="http://wet-boew.github.io/themes-dist/theme-base/index-en.html">Base theme.</a></p>
 
-		<div class="row">
-			<div class="well">
-				<h2 class="mrgn-tp-0" id="quick">Quick view</h2>
-				<p>View all design features on a single page: <a href="options-en.html" class="btn btn-primary">Demo of all design features</a></p>
-			</div>
-		</div>
+<section>
+	<h2>Structure and placement</h2>
+	<p>Designing content layout with CSS.</p>
+	<div class="row">
+	<div class="col-md-3">
+		<ul class="list-unstyled">
+			<li><a href="design/alignment-en.html">Absolute positioning</a></li>
+			<li><a href="design/position-en.html">Alignment</a></li>
+			<li><a href="design/floats-en.html">Floats</a></li>
+			<li><a href="design/grids-en.html">Grids</a></li>
+		</ul>
 	</div>
 
-	<section class="col-md-4">
-		<h2 class="wb-inv">Related</h2>
-		<div class="list-group hidden-xs hidden-sm">
-			<a href="../design/index-en.html" class="list-group-item active">Design guide</a>
-			<a href="../writing/index-en.html" class="list-group-item">Writing guide</a>
-			<a href="../usability/index-en.html" class="list-group-item">Usability guide</a>
-			<a href="../accessibility/index-en.html" class="list-group-item">Accessibility guide</a>
-		</div>
-
-		<blockquote>
-			<p>Industry data shows that for each dollar spent to fix a problem during product design, $10 are spent to fix the same problem in product development, and $100 or more are spent to fix the same problem after product release.</p>
-			<p class="text-right">-Claire Marie Karat<br />A business case approach to usability cost justification</p>
-		</blockquote>
-	</section>
-</div>
-
-<section class="well">
-	<h2 id="core" class="mrgn-tp-0">Core design features <small>CSS-only design features</small></h2>
-	<div class="row">
-		<section class="col-md-3">
-			<h3 class="h4">Structure and placement</h3>
-			<ul class="list-unstyled">
-				<li><a href="position-en.html">Absolute positioning</a></li>
-				<li><a href="alignment-en.html">Alignment</a></li>
-				<li><a href="floats-en.html">Floats</a></li>
-				<li><a href="grids-en.html">Grids</a></li>
-				<li><a href="proximity-en.html">Margin proximity </a></li>
-				<li><a href="reflow-en.html">Reflowing content around grids</a></li>
-			</ul>
-		</section>
-
-		<section class="col-md-3">
-			<h3 class="h4">Basic effects</h3>
-			<ul class="list-unstyled">
-				<li><a href="borders-en.html">Borders</a></li>
-				<li><a href="buttons-en.html">Buttons</a></li>
-				<li><a href="colour-en.html">Colour</a></li>
-				<li><a href="forms-en.html">Forms</a></li>
-				<li><a href="icons-en.html">Icons</a></li>
-				<li><a href="images-en.html">Images</a></li>
-				<li><a href="visible-en.html">Invisible and visible content</a></li>
-				<li><a href="opacity-en.html">Opacity</a></li>
-			</ul>
-		</section>
-
-		<section>
-			<h3 class="h4">Text effects</h3>
-			<ul class="list-unstyled">
-				<li><a href="blockquotes-en.html">Blockquotes</a></li>
-				<li><a href="code-en.html">Code</a></li>
-				<li><a href="headings-en.html">Headings</a></li>
-				<li><a href="links-en.html">Links</a></li>
-				<li><a href="lists-en.html">Lists</a></li>
-				<li><a href="keyboard-en.html">Keyboard keys</a></li>
-				<li><a href="sizing-en.html">Sizing</a></li>
-				<li><a href="tables-en.html">Tables</a></li>
-				<li><a href="whitespace-en.html">Whitespace</a></li>
-			</ul>
-		</section>
-
-		<section class="col-md-3">
-			<h3 class="h4">Menus and navigation</h3>
-			<ul class="list-unstyled">
-				<li><a href="buttons-en.html">Buttons</a></li>
-				<li><a href="listgroup-en.html">List group </a></li>
-				<li><a href="pagination-en.html">Pagination</a></li>
-				<li><a href="pills-en.html">Pills</a></li>
-			</ul>
-		</section>
-
-		<section class="col-md-3">
-			<h3 class="h4">Callouts</h3>
-			<ul class="list-unstyled">
-				<li><a href="alerts-en.html">Alerts</a></li>
-				<li><a href="badges-en.html">Badges</a></li>
-				<li><a href="buttons-en.html">Buttons</a></li>
-				<li><a href="labels-en.html">Labels</a></li>
-				<li><a href="jumbotron-en.html">Jumbotron</a></li>
-				<li><a href="panels-en.html">Panels</a></li>
-				<li><a href="progress-en.html">Progress bar </a></li>
-				<li><a href="wells-en.html">Wells </a></li>
-			</ul>
-		</section>
+	<div class="col-md-3">
+		<ul class="list-unstyled">
+			<li><a href="design/proximity-en.html">Margin proximity</a></li>
+			<li><a href="design/reflow-en.html">Reflowing content around grids</a></li>
+		</ul>
+	</div>
 	</div>
 </section>
 
-<section class="well">
-	<h2 id="plugin" class="mrgn-tp-0">Plug-in design features <small>JavaScript and polyfill design features</small></h2>
+<section>
+	<h2>Basic effects</h2>
+	<p>Basic design techniques.</p>
+	<div class="row">
+	<div class="col-md-3">
+		<ul class="list-unstyled">
+			<li><a href="design/borders-en.html">Borders</a></li>
+			<li><a href="design/blockquotes-en.html">Blockquotes</a></li>
+			<li><a href="design/buttons-en.html">Buttons</a></li>
+			<li><a href="design/code-en.html">Code</a></li>
+		</ul>
+	</div>
+	<div class="col-md-3">
+		<ul class="list-unstyled">
+			<li><a href="design/colour-en.html">Colour</a></li>
+			<li><a href="design/forms-en.html">Forms</a></li>
+			<li><a href="design/headings-en.html">Headings</a></li>
+			<li><a href="design/icons-en.html">Icons</a></li>
+		</ul>
+	</div>
+	<div class="col-md-3">
+		<ul class="list-unstyled">
+			<li><a href="design/images-en.html">Images</a></li>
+			<li><a href="design/visible-en.html">Invisible and visible content</a></li>
+			<li><a href="design/links-en.html">Links</a></li>
+			<li><a href="design/lists-en.html">Lists</a></li>
+		</ul>
+	</div>
+	<div class="col-md-3">
+		<ul class="list-unstyled">
+			<li><a href="design/keyboard-en.html">Keyboard keys</a></li>
+			<li><a href="design/opacity-en.html">Opacity</a></li>
+			<li><a href="design/sizing-en.html">Sizing</a></li>
+			<li><a href="design/tables-en.html">Tables</a></li>
+		</ul>
+	</div>
+	</div>	
+</section>
+
+<section>
+	<h2>Menu and navigation</h2>
+	<p>Basic CSS design for menus and navigation.</p>
+	<div class="row">
+	<div class="col-md-3">
+		<ul class="list-unstyled">
+			<li><a href="design/buttons-en.html">Buttons</a></li>
+			<li><a href="design/list-group-en.html">List group</a></li>
+			<li><a href="design/pagination-en.html">Pagination</a></li>
+			<li><a href="design/pills-en.html">Pills</a></li>
+		</ul>
+	</div>
+	</div>
+</section>
+
+<section>
+	<h2>Callouts</h2>
+	<p>Look in this section for some design techniques that adds importance to pieces of text on a page.</p>
+	<div class="row">
+	<div class="col-md-3">
+		<ul class="list-unstyled">
+			<li><a href="design/alerts-en.html">Alerts</a></li>
+			<li><a href="design/badges-en.html">Badges</a></li>
+			<li><a href="design/buttons-en.html">Buttons</a></li>
+			<li><a href="design/labels-en.html">Labels</a></li>
+		</ul>
+	</div>
+	<div class="col-md-3">
+		<ul class="list-unstyled">
+			<li><a href="design/jumbotron-en.html">Jumbotron</a></li>
+			<li><a href="design/panels-en.html">Panels</a></li>
+			<li><a href="design/progressmeter-en.html">Progress bar</a></li>
+			<li><a href="design/wells-en.html">Wells</a></li>
+		</ul>
+	</div>
+	</div>
+</section>
+
+<br />
+<br />
+
+<section>
+	<h2 id="plugin" class="mrgn-tp-0">Plug-in design features</h2>
+	<p>JavaScript and polyfill design features.</p>
 	<table id="components" class="wb-prettify wb-tables table table-striped table-hover" data-wet-boew='{"aoColumnDefs": [ { "bVisible": false, "aTargets": [ 3 ] } ], "aLengthMenu": [[10, 25, -1], [10, 25, "All"]], "iDisplayLength": -1 }'>
 		<thead>
 			<tr>
