Fixed some links in index-en.hbs for design guide

--- a/site/pages/v4/design/index-en.hbs
+++ b/site/pages/v4/design/index-en.hbs
@@ -15,17 +15,17 @@
 	<div class="row">
 	<div class="col-md-3">
 		<ul class="list-unstyled">
-			<li><a href="design/alignment-en.html">Absolute positioning</a></li>
-			<li><a href="design/position-en.html">Alignment</a></li>
-			<li><a href="design/floats-en.html">Floats</a></li>
-			<li><a href="design/grids-en.html">Grids</a></li>
+			<li><a href="alignment-en.html">Absolute positioning</a></li>
+			<li><a href="position-en.html">Alignment</a></li>
+			<li><a href="floats-en.html">Floats</a></li>
+			<li><a href="grids-en.html">Grids</a></li>
 		</ul>
 	</div>
 
 	<div class="col-md-3">
 		<ul class="list-unstyled">
-			<li><a href="design/proximity-en.html">Margin proximity</a></li>
-			<li><a href="design/reflow-en.html">Reflowing content around grids</a></li>
+			<li><a href="proximity-en.html">Margin proximity</a></li>
+			<li><a href="reflow-en.html">Reflowing content around grids</a></li>
 		</ul>
 	</div>
 	</div>
@@ -37,34 +37,34 @@
 	<div class="row">
 	<div class="col-md-3">
 		<ul class="list-unstyled">
-			<li><a href="design/borders-en.html">Borders</a></li>
-			<li><a href="design/blockquotes-en.html">Blockquotes</a></li>
-			<li><a href="design/buttons-en.html">Buttons</a></li>
-			<li><a href="design/code-en.html">Code</a></li>
+			<li><a href="borders-en.html">Borders</a></li>
+			<li><a href="blockquotes-en.html">Blockquotes</a></li>
+			<li><a href="buttons-en.html">Buttons</a></li>
+			<li><a href="code-en.html">Code</a></li>
 		</ul>
 	</div>
 	<div class="col-md-3">
 		<ul class="list-unstyled">
-			<li><a href="design/colour-en.html">Colour</a></li>
-			<li><a href="design/forms-en.html">Forms</a></li>
-			<li><a href="design/headings-en.html">Headings</a></li>
-			<li><a href="design/icons-en.html">Icons</a></li>
+			<li><a href="colour-en.html">Colour</a></li>
+			<li><a href="forms-en.html">Forms</a></li>
+			<li><a href="headings-en.html">Headings</a></li>
+			<li><a href="icons-en.html">Icons</a></li>
 		</ul>
 	</div>
 	<div class="col-md-3">
 		<ul class="list-unstyled">
-			<li><a href="design/images-en.html">Images</a></li>
-			<li><a href="design/visible-en.html">Invisible and visible content</a></li>
-			<li><a href="design/links-en.html">Links</a></li>
-			<li><a href="design/lists-en.html">Lists</a></li>
+			<li><a href="images-en.html">Images</a></li>
+			<li><a href="visible-en.html">Invisible and visible content</a></li>
+			<li><a href="links-en.html">Links</a></li>
+			<li><a href="lists-en.html">Lists</a></li>
 		</ul>
 	</div>
 	<div class="col-md-3">
 		<ul class="list-unstyled">
-			<li><a href="design/keyboard-en.html">Keyboard keys</a></li>
-			<li><a href="design/opacity-en.html">Opacity</a></li>
-			<li><a href="design/sizing-en.html">Sizing</a></li>
-			<li><a href="design/tables-en.html">Tables</a></li>
+			<li><a href="keyboard-en.html">Keyboard keys</a></li>
+			<li><a href="opacity-en.html">Opacity</a></li>
+			<li><a href="sizing-en.html">Sizing</a></li>
+			<li><a href="tables-en.html">Tables</a></li>
 		</ul>
 	</div>
 	</div>	
@@ -76,10 +76,10 @@
 	<div class="row">
 	<div class="col-md-3">
 		<ul class="list-unstyled">
-			<li><a href="design/buttons-en.html">Buttons</a></li>
-			<li><a href="design/list-group-en.html">List group</a></li>
-			<li><a href="design/pagination-en.html">Pagination</a></li>
-			<li><a href="design/pills-en.html">Pills</a></li>
+			<li><a href="buttons-en.html">Buttons</a></li>
+			<li><a href="list-group-en.html">List group</a></li>
+			<li><a href="pagination-en.html">Pagination</a></li>
+			<li><a href="pills-en.html">Pills</a></li>
 		</ul>
 	</div>
 	</div>
@@ -91,18 +91,18 @@
 	<div class="row">
 	<div class="col-md-3">
 		<ul class="list-unstyled">
-			<li><a href="design/alerts-en.html">Alerts</a></li>
-			<li><a href="design/badges-en.html">Badges</a></li>
-			<li><a href="design/buttons-en.html">Buttons</a></li>
-			<li><a href="design/labels-en.html">Labels</a></li>
+			<li><a href="alerts-en.html">Alerts</a></li>
+			<li><a href="badges-en.html">Badges</a></li>
+			<li><a href="buttons-en.html">Buttons</a></li>
+			<li><a href="labels-en.html">Labels</a></li>
 		</ul>
 	</div>
 	<div class="col-md-3">
 		<ul class="list-unstyled">
-			<li><a href="design/jumbotron-en.html">Jumbotron</a></li>
-			<li><a href="design/panels-en.html">Panels</a></li>
-			<li><a href="design/progressmeter-en.html">Progress bar</a></li>
-			<li><a href="design/wells-en.html">Wells</a></li>
+			<li><a href="jumbotron-en.html">Jumbotron</a></li>
+			<li><a href="panels-en.html">Panels</a></li>
+			<li><a href="progressmeter-en.html">Progress bar</a></li>
+			<li><a href="wells-en.html">Wells</a></li>
 		</ul>
 	</div>
 	</div>
