Design guide: Changed blockquote page to quotations page, including adding a section on inline quotes.
Fixes #214

--- a/site/pages/v4/design/index-en.hbs
+++ b/site/pages/v4/design/index-en.hbs
@@ -81,7 +81,7 @@
 		<section>
 			<h3 class="h4">Text effects</h3>
 			<ul class="list-unstyled">
-				<li><a href="blockquotes-en.html">Blockquotes</a></li>
+				<li><a href="quotations-en.html">Quotations</a></li>
 				<li><a href="code-en.html">Code</a></li>
 				<li><a href="headings-en.html">Headings</a></li>
 				<li><a href="links-en.html">Links</a></li>
