--- a/site/pages/v4/design/options-en.hbs
+++ b/site/pages/v4/design/options-en.hbs
@@ -27,18 +27,19 @@
 			</footer>
 		</section>
 
-		<section class="panel panel-default" id="blockquotes">
+		<section class="panel panel-default" id="quotations">
 			<header class="panel-heading">
-				<h2 class="panel-title">Blockquotes</h2>
+				<h2 class="panel-title">Quotations</h2>
 			</header>
 			<div class="panel-body">
 				<blockquote>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
 					<small>Someone famous in <cite title="Source Title">Source Title</cite></small>
 				</blockquote>
+				<p>"<q>Our Government is committed to protecting livestock health</q>" said Minister Ritz.</p>
 			</div>	
 			<footer class="panel-footer text-right">
-				<p class="mrgn-bttm-0 h4">In detail: <a href="blockquotes-en.html" class="btn btn-primary">Blockquotes <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+				<p class="mrgn-bttm-0 h4">In detail: <a href="quotations-en.html" class="btn btn-primary">Quotations <span class="glyphicon glyphicon-chevron-right"></span></a></p>
 			</footer>
 		</section>
 	</div>
