--- a/site/pages/v4/writing/formatting-en.hbs
+++ b/site/pages/v4/writing/formatting-en.hbs
@@ -18,7 +18,7 @@
 			<ul class="colcount-sm-2 colcount-md-3">
 				<li><a href="#acronyms">Acronyms and initialisms</a></li>
 				<li><a href="#addresses">Addresses</a></li>
-				<li><a href="#blockquotes">Blockquotes</a></li>
+				<li><a href="#quotations">Quotations</a></li>
 				<li><a href="#bold">Bold</a></li>
 				<li><a href="#english">Canadian English</a></li>
 				<li><a href="#capitalization">Capitalization</a></li>
@@ -335,17 +335,17 @@
 			</tr>
 		</tbody>
 	</table>
-	<h2 class="page-header" id="blockquotes">Blockquotes</h2>
+	<h2 class="page-header" id="quotations">Quotations</h2>
 	<div class="row">
 		<div class="col-md-8">
-			<p>For quoting blocks of content from another source within your document.</p>
+			<p>For quoting content from another source within your document.</p>
 		</div>
 		<div class="col-md-4">
 			<div class="well">
-				<h2 class="h3 mrgn-tp-0">Related </h2>
+				<h2 class="h3 mrgn-tp-0">Related</h2>
 				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
-					<li><a href="../design/blockquotes-en.html">Blockquotes<span class="wb-inv"><span class="wb-inv"> - Design guide</span></span></a></li>
+					<li><a href="../design/quotations-en.html">Quotations<span class="wb-inv"><span class="wb-inv"> - Design guide</span></span></a></li>
 				</ul>
 				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
