--- a/site/pages/v4/writing/index-en.hbs
+++ b/site/pages/v4/writing/index-en.hbs
@@ -52,7 +52,7 @@
 				<ul class="colcount-sm-2 list-unstyled">
 					<li><a href="formatting-en.html#acronyms">Acronyms and initialisms</a></li>
 					<li><a href="formatting-en.html#addresses">Addresses</a></li>
-					<li><a href="formatting-en.html#blockquotes">Blockquotes</a></li>
+					<li><a href="formatting-en.html#quotations">Quotations</a></li>
 					<li><a href="formatting-en.html#bold">Bold</a></li>
 					<li><a href="formatting-en.html#english">Canadian English</a></li>
 					<li><a href="formatting-en.html#capitalization">Capitalization</a></li>
