--- a/site/pages/v4/accessibility/guide-en.hbs
+++ b/site/pages/v4/accessibility/guide-en.hbs
@@ -310,13 +310,13 @@
 				<div class="panel-heading">
 					<h3 class="panel-title">Design guide</h3>
 				</div>
-				<div class="list-group"><a href="../design/blockquotes-en.html" class="list-group-item">Blockquotes<span class="wb-inv"> - Design guide</span></a> </div>
+				<div class="list-group"><a href="../design/quotations-en.html" class="list-group-item">Quotations<span class="wb-inv"> - Design guide</span></a> </div>
 			</div>
 			<div class="panel panel-info">
 				<div class="panel-heading">
 					<h3 class="panel-title">Writing guide</h3>
 				</div>
-				<div class="list-group"><a href="../writing/formatting-en.html#blockquotes" class="list-group-item">Blockquotes<span class="wb-inv"> - Writing guide</span></a></div>
+				<div class="list-group"><a href="../writing/formatting-en.html#quotations" class="list-group-item">Quotations<span class="wb-inv"> - Writing guide</span></a></div>
 			</div>
 		</div>
 		<div class="mrgn-lft-md mrgn-rght-md">
