Renamed 'Dismissible alert' to 'Collapsible alerts'
Plus, added the Collapsible alerts to the ToC.

--- a/site/pages/v4/design/alerts-en.hbs
+++ b/site/pages/v4/design/alerts-en.hbs
@@ -18,6 +18,7 @@
 					<li><a href="#description">Description</a></li>
 					<li><a href="#options">Alert options</a></li>
 					<li><a href="#links">Alert links</a></li>
+					<li><a href="#collapsible">Collapsible alerts</a></li>
 				</ul>
 			</div>
 		</section>
@@ -169,8 +170,8 @@
 </section>
 
 <section>
-	<h2 class="page-header" id="dismiss">Dismissible alerts</h2>
-	<p>You can use a <code>details</code>/<code>summary</code> elements group to produce dismissible alerts. The open and closed state will be remembered via Local Storage which relies on the <code>id</code> attribute of the <code>details</code> element. You can use the same <code>id</code> value across different pages to have an alert remember its state from page to page.</p>
+	<h2 class="page-header" id="collapsible">Collapsible alerts</h2>
+	<p>You can use a <code>details</code>/<code>summary</code> elements group to produce collapsible alerts. The open and closed state will be remembered via Local Storage which relies on the <code>id</code> attribute of the <code>details</code> element. You can use the same <code>id</code> value across different pages to have an alert remember its state from page to page.</p>
 
 	<section>
 		<details class="alert alert-success" id="alert-success-en" open="open">
