second try at fixing translations

--- a/site/includes/sitewidemessages.hbs
+++ b/site/includes/sitewidemessages.hbs
@@ -1,6 +1,6 @@
 <section class="alert alert-info">
-	<h2 class="h3">{{#contains page.language "fr"}}Travaux en cours{{else}}Work in progress{{/contains}}</h2>
-	<p>{{#contains page.language "fr"}}Cette page est un travail en cours et requiert une révision. S'il vous plaît <a href="https://github.com/wet-boew/wet-boew-styleguide/issues/new">soumettre une question</a> ou soumettre une demande de tirage si les informations ou le codage est manquant, incorrect ou hors de synchronisation avec le répositoire principal{{else}}This page is a work in progress and requires review. Please <a href="https://github.com/wet-boew/wet-boew-styleguide/issues/new">file an issue</a> or submit a pull request if information or coding is missing, incorrect or out of sync with the main repository{{/contains}} (wet-boew/wet-boew).</p>
+	<h2 class="h3">{{#contains page.language "fr"}}Contenu en cours d'élaboration{{else}}Work in progress{{/contains}}</h2>
+	<p>{{#contains page.language "fr"}}Ce contenu est en cours d'élaboration de doit être révisé. S'il vous plaît <a href="https://github.com/wet-boew/wet-boew-styleguide/issues/new"> nous aviser</a> ou proposer une correction pour toute information ou codage incorrect ou hors de synchronisation avec le dépôt principal{{else}}This page is a work in progress and requires review. Please <a href="https://github.com/wet-boew/wet-boew-styleguide/issues/new">file an issue</a> or submit a pull request if information or coding is missing, incorrect or out of sync with the main repository{{/contains}} (wet-boew/wet-boew).</p>
 </section>
 
 {{>v31notice}}
