--- a/site/pages/v4/usability/index-fr.hbs
+++ b/site/pages/v4/usability/index-fr.hbs
@@ -17,8 +17,8 @@
 				</span>
 			</div>
 			<div class="col-md-8 col-lg-9">
-				<p>Le guide de la convivialité d'utilisation fournit aux auteurs de contenu et aux webmaîtres une compréhension de la façon dont le comportement de l'utilisateur qui impact si le contenu est utilisable ou non.</p>
-				<p>(Renseignements vient ici)</p>
+				<p>Le guide de convivialité d'utilisation fournit aux auteurs de contenu et aux webmestres une compréhension de la façon dont le comportement de l'utilisateur impacte la facilité d'utilisation du contenu.</p>
+				<p>(Ajouter les détails ici)</p>
 			</div>
 		</div>
 	</div>
@@ -33,12 +33,12 @@
 		</div>
 
 		<blockquote>
-			<p>Citer ici</p>
+			<p>Citation ici</p>
 			<p class="text-right">-Nom</p>
 		</blockquote>
 
 		<blockquote>
-			<p>Citer ici</p>
+			<p>Citation ici</p>
 			<p class="text-right">-Nom</p>
 		</blockquote>
 	</section>
