--- a/site/pages/v4/index-fr.hbs
+++ b/site/pages/v4/index-fr.hbs
@@ -9,14 +9,14 @@
 ---
 <div class="row">
 	<div class="col-md-8">
-		<p>Le guide de style est décomposé de deux façons - par catégorie et par rôle d'utilisateur - les deux vous rends à la même information.</p>
-		<p>Conformité à la documentation est obligatoire, car il fera en sorte que le contenu est accessible, utilisable, bien formaté, bien écrit et bien positionné pour les changements à venir.</p>
+		<p>Le guide de style est décomposé de deux façons - par catégorie et par rôle d'utilisateur - les deux vous rendent à la même information.</p>
+		<p>La conformité à la documentation est obligatoire, car ceci assurera que le contenu soit accessible, utilisable, bien formaté, bien écrit et bien positionné pour les changements à venir.</p>
 		<div class="row">
 			<section class="col-md-6">
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<h2 class="mrgn-tp-0 h3">Guide de conception</h2>
-						<p>Offre un grand choix de caractéristiques de conception et de mise en page pour les modèles de base et complexes.</p>
+						<p>Offre un grand choix d'options de conception et de mise en page pour les modèles de base et complexes.</p>
 						<p class="text-center">
 							<a href="design/index-fr.html" style="text-decoration: none;">
 								<span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block">
@@ -71,7 +71,7 @@
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<h2 class="mrgn-tp-0 h3">Guide d'accessibilité</h2>
-						<p>Créer et codé du contenu de sorte que c'est accessible à tous les utilisateurs, peu importe leurs capacités ou incapacité.</p>
+						<p>Créer et coder du contenu accessible à tous les utilisateurs, peu importe leurs capacités ou leurs handicaps.</p>
 						<p class="text-center">
 							<a href="accessibility/index-fr.html" style="text-decoration: none;">
 								<span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block">
@@ -90,41 +90,41 @@
 		<div class="well">
 			<section class="panel panel-default">
 				<div class="panel-body">
-					<h2 class="mrgn-tp-0 h3">Rôle de l'auteur</h2>
-					<p>Pour <strong>l'auteur, créateur de contenu ou le coordonnateur des contenus</strong>.</p>
-					<p><a href="role/author-fr.html" class="btn btn-info btn-block">Rôle de l'auteur</a></p>
+					<h2 class="mrgn-tp-0 h3">Rôle d'auteur</h2>
+					<p>Pour <strong>l'auteur, le créateur de contenu et le coordonnateur des contenus</strong>.</p>
+					<p><a href="role/author-fr.html" class="btn btn-info btn-block">Rôle d'auteur</a></p>
 				</div>
 			</section>
 
 			<section class="panel panel-default">
 				<div class="panel-body">
-					<h2 class="mrgn-tp-0 h3">Rôle du Webmaître / développeur</h2>
-					<p>Pour les <strong>Webmaîtres ou développeur</strong>.</p>
-					<p><a href="role/webmaster-fr.html" class="btn btn-info btn-block">Rôle du Webmaître / développeur</a></p>
+					<h2 class="mrgn-tp-0 h3">Rôle de webmestre / développeur</h2>
+					<p>Pour les <strong>webmestres et les développeurs</strong>.</p>
+					<p><a href="role/webmaster-fr.html" class="btn btn-info btn-block">Rôle de webmestre / développeur</a></p>
 				</div>
 			</section>
 
 			<section class="panel panel-default">
 				<div class="panel-body">
-					<h2 class="mrgn-tp-0 h3">Rôle du concepteur</h2>
-					<p>Pour les <strong>graphistes, concepteurs d'interaction ou prototypeurs</strong>.</p>
-					<p><a href="role/designer-fr.html" class="btn btn-info btn-block">Rôle du concepteur</a></p>
+					<h2 class="mrgn-tp-0 h3">Rôle de concepteur</h2>
+					<p>Pour les <strong>graphistes, les concepteurs d'interaction et les prototypeurs</strong>.</p>
+					<p><a href="role/designer-fr.html" class="btn btn-info btn-block">Rôle de concepteur</a></p>
 				</div>
 			</section>
 
 			<section class="panel panel-default">
 				<div class="panel-body">
-					<h2 class="mrgn-tp-0 h3">Rôle GI / Architectes d'informations </h2>
-					<p>Pour les <strong>gestionnaires de l'information ou de l'architecture de l'information</strong>.</p>
-					<p><a href="role/ia-fr.html" class="btn btn-info btn-block">Rôle GI / Architectes d'informations</a></p>
+					<h2 class="mrgn-tp-0 h3">Rôles de gestionnaire / architecte de l'information</h2>
+					<p>Pour les <strong>gestionnaires et les architectes de l'information</strong>.</p>
+					<p><a href="role/ia-fr.html" class="btn btn-info btn-block">Rôles de gestionnaire / architecte de l'information</a></p>
 				</div>
 			</section>
 
 			<section class="panel panel-default mrgn-bttm-0">
 				<div class="panel-body">
-					<h2 class="mrgn-tp-0 h3">Rôle du gestionnaire</h2>
-					<p>Pour les <strong>gestionnaires</strong> ou <strong>gestionnaires de project</strong>.</p>
-					<p><a href="role/manager-fr.html" class="btn btn-info btn-block">Rôle du gestionnaire</a></p>
+					<h2 class="mrgn-tp-0 h3">Rôle de gestionnaire</h2>
+					<p>Pour les <strong>gestionnaires</strong> et les <strong>gestionnaires de project</strong>.</p>
+					<p><a href="role/manager-fr.html" class="btn btn-info btn-block">Rôle de gestionnaire</a></p>
 				</div>
 			</section>
 		</div>
